--- a/style.css
+++ b/style.css
@@ -52,3 +52,10 @@ a.social-icon.github:hover {
 	opacity: 1;
 	background-position: 0 -38px;
 }
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    a.social-icon.github {
+        opacity: 1;
+        background-position: 0 -38px;
+    }
+}
